--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5089df2
+	base = 267d259
 	trimbase = 
 	parent = release/kinetic/open_karto
-	previous = 
+	previous = 5089df2
