--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f7bdff
+	base = 282d323
 	trimbase = 
 	parent = arch/kinetic/open_karto
-	previous = 
+	previous = 2f7bdff
